--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -9,7 +9,27 @@
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('orders')}"></div>
         <main class="col-md-8 px-md-3">
-                <div> orders</div>
+            <h2>Orders</h2>
+            <div class="accordion" id="ordersAccordion">
+            <div th:each="order, orderStat : ${orders}" class="accordion-item">
+                <h2 class="accordion-header" th:id="'heading' + ${orderStat.index}">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapse' + ${orderStat.index}" aria-expanded="true" th:aria-controls="'collapse' + ${orderStat.index}">
+                        Order ID: <span th:text="${order.orderId}"></span>
+                    </button>
+                </h2>
+                <div th:id="'collapse' + ${orderStat.index}" class="accordion-collapse collapse" th:classappend="${orderStat.index == 0} ? 'show'" th:aria-labelledby="'heading' + ${orderStat.index}" data-bs-parent="#ordersAccordion">
+                    <div class="accordion-body">
+                        <ul class="list-group">
+                            <li th:each="line : ${order.orderLines}" class="list-group-item">
+                                Line ID: <span th:text="${line.lineId}"></span>,
+                                Item Name: <span th:text="${line.itemName}"></span>,
+                                Quantity: <span th:text="${line.quantity}"></span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         </main>
         <div class="col"></div>
     </div>
