--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -12,24 +12,9 @@
                     <h1>Wastage</h1>
                 <div class="row">
                     <div class="col col-md-6">
-<!--                        <form action="#" th:action="@{/users/adduser}" method="post">-->
-                            <label for="username">Username:</label>
-                            <input  type="text" id="username" name="username"/><br/>
-
-                            <label for="password">Password:</label>
-                            <input type="password" id="password" name="password"/><br/>
-
-                            <label for="password">Name:</label>
-                            <input type="text" id="name" name="name"/><br/>
-
-                            <label for="password">Surname:</label>
-                            <input type="text" id="surname" name="surname"/><br/>
-
-                            <label for="password">Position:</label>
-                            <input type="text" id="position" name="position" /><br/>
-
-
-                            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#waste">Add</button>
+                        <!-- <form id="namesForm" th:action="@{/submitNames}" method="post"-->
+                        <!-- Dynamically added fields will go here -->
+                        <button type="submit">Submit</button>
 <!--                        </form>-->
                     </div>
                     <div class="col col-md-4 col-sm-12 mt-5">
