--- a/src/main/resources/templates/ordersList.html
+++ b/src/main/resources/templates/ordersList.html
@@ -10,6 +10,10 @@
         <div th:replace="~{fragments/sidebar :: sidebar('orders')}"></div>
         <main class="col-md-8 px-md-3">
             <h2>Orders</h2>
+            <div>
+             <a href="/newOrder" class="btn btn-success my-3">Add order</a>
+            </div>
+
             <div class="accordion" id="ordersAccordion">
             <div th:each="order, orderStat : ${orders}" class="accordion-item">
                 <h2 class="accordion-header" th:id="'heading' + ${orderStat.index}">
