--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -14,7 +14,7 @@
                     <div class="col col-md-6">
                         <!-- <form id="namesForm" th:action="@{/submitNames}" method="post"-->
                         <!-- Dynamically added fields will go here -->
-                        <button type="submit">Submit</button>
+                        <button class="btn btn-success" type="submit">Submit</button>
 <!--                        </form>-->
                     </div>
                     <div class="col col-md-4 col-sm-12 mt-5">
