--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -9,41 +9,40 @@
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
         <main class="col-md-8 px-md-3">
-          <div id="editUserForm">
-            <div class="row py-2">
-                <div class="col col-md-1">
-                    <a href="/users/list" class="btn btn-secondary ">Back</a>
-                </div>
-                    <h1 class="col">Edit User <span th:text="${user.username}"></span></h1>
-            </div>
+
+
+                <h1 class="col my-2">Edit User <span th:text="${user.username}"></span></h1>
+                <a href="/users/list" class="btn btn-secondary p-2 my-2">Back</a>
+                <div class="row py-2">
+<!--                    <div id="editUserForm">-->
                     <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="container mt-3" >
                     <div>
-                        <input th:field="*{username}" type="hidden" name="username">
+                        <input th:field="*{username}" type="hidden" name="username" class="textfield">
                     </div>
 
                     <div>
                         <label for="password">Password:</label>
-                        <input type="password" id="password" name="password" placeholder="Current Password" class="form-control">
+                        <input type="password" id="password" name="password" placeholder="Current Password" class="form-control textfield">
                     </div>
 
                     <div>
                         <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" th:field="*{name}" class="form-control">
+                        <input type="text" id="name" name="name" th:field="*{name}" class="form-control textfield">
                     </div>
 
                     <div >
                         <label for="surname">Surname:</label>
-                        <input type="text" id="surname" name="surname" th:field="*{surname}" class="form-control">
+                        <input type="text" id="surname" name="surname" th:field="*{surname}" class="form-control textfield">
                     </div>
 
                     <div >
                         <label for="position">Position:</label>
-                        <input type="text" id="position" name="position" th:field="*{position}" class="form-control">
+                        <input type="text" id="position" name="position" th:field="*{position}" class="form-control textfield">
                     </div>
 
                     <div>
                         <label for="role">Role:</label>
-                        <select id="role" name="role" class="form-control">
+                        <select id="role" name="role" class="form-control textfield py-0">
                             <option value="ADMIN">ADMIN</option>
                             <option value="USER">USER</option>
                         </select>
@@ -60,6 +59,7 @@
                     </form>
                 </div>
                 </div>
+<!--                </div>-->
             </main>
             <div class="col"></div>
         </div>
