--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -11,7 +11,7 @@
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
         <main class="col-md-8 px-md-3">
             <h1>User List</h1>
-            <a href="/index" class="btn btn-secondary">Back</a>
+            <a href="/index" class="btn btn-secondary p-2 my-2">Back</a>
             <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col">
