--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar}"></div>
 <div class="container-fluid">
-        <div class="row">
+        <div class="row bg img-fluid">
             <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
             <main class="col-md-8 px-md-3">
                 <h1>Mains</h1>
@@ -16,17 +16,18 @@
 <!--                        Pictures must be added and logic tested-->
 
                         <div class="weather row my-3  border">
-                            <h4 class="px-5 text-center" style="color: #124413">Weather</h4>
                             <div class="col col-md-3">
+
                                 <img th:src="${weather.description == 'Sunny and warm' ? '/img/weather/sun.png' :
                                           weather.description == 'Rain' ? '/img/weather/rain.png' :
                                           weather.description == 'Thunderstorms' ? '/img/weather/thunder.png' :
                                           weather.description == 'Cloudy or overcast' ? '/img/weather/cloud.png' :
                                           weather.description == 'Snow' ? '/img/weather/snow.png' :
                                           weather.description == 'Fog' ? '/img/weather/fog.png' :
-                                          '/img/weather/default.png'}" class="weatherImg" alt="Weather Image"/>
+                                          '/img/weather/default.png'}" class="weatherImg " alt="Weather Image"/>
                             </div>
                             <div class="col">
+                                <h4 class="p-3 text-center" style="color: #124413">Weather: <span th:text="${weather.date}"></span></h4>
                                 <p class="fw-bold" th:text="${weather.description}"></p>
                                 <p>Temperature: <span th:text="${weather.temp}"></span> °C</p>
                             </div>
