--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -129,6 +129,12 @@ table, card{
 bg{
     background-image: url('img/background.jpg');
 }
+.arrow-btn{
+    width: 10%;
+    padding: 5px;
+    border-color: #124413;
+}
+
 @media (max-width: 767.98px) {
     .sidebar {
         width: 100vw;
@@ -175,6 +181,7 @@ bg{
         display: none;
     }
 }
+
 
 /* Toggle button for small screens */
 #sidebarToggle {
