--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -10,7 +10,7 @@
         <div th:replace="~{fragments/sidebar :: sidebar('calendar')}"></div>
         <main class="col-md-8 px-md-3 cover">
                <h1>Calendar</h1>
-            <div class="row cover">
+            <div class="row">
                 <div class="col col-sm-6 calendar-header">
                     <button id="prev" class="btn arrow-btn">&lt;</button>
                     <h4 id="monthYear"></h4>
@@ -29,12 +29,12 @@
                 </div>
             <form>
                 <div class="pt-5">
-                    <label for="event">Event participants:</label>
+                    <label for="event">participants on event:</label>
                     <input type="number" id="event"/>
-                    <button class="btn btn-success">Add</button></br>
+<!--                    <button class="btn btn-success">Add</button></br>-->
                 </div>
                 <div class="pt-5">
-                    <label for="notes">Notes:</label>
+                    <label for="notes">Additional Notes:</label>
                     <textarea id="notes" rows="4"></textarea>
                     <button type="submit" class="btn btn-primary"> Update</button>
                 </div>
