--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -134,7 +134,9 @@ bg{
     padding: 5px;
     border-color: #124413;
 }
-
+.hidden{
+    display: none;
+}
 @media (max-width: 767.98px) {
     .sidebar {
         width: 100vw;
