--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
             <main class="col-md-8 px-md-3">
                 <h1>Mains</h1>
                 <div class="row">
-                    <div class="col p-0 bg-light calendar-left">
+                    <div class="col px-2 bg-light calendar-left">
                         <div class="calendar-header">
                             <button id="prev" class="btn arrow-btn">&lt;</button>
                             <h4 id="monthYear"></h4>
@@ -24,7 +24,7 @@
                             <div id="calendarDays" class="d-flex flex-wrap"></div>
                         </div>
                     </div>
-                    <div class="col col-sm-4 calendar-right">
+                    <div class="col col col-md-4 col-sm-12 px-2 calendar-right">
                         <div class="row">
                             <div class="col ">
                                 <h5 class="text-center my-3 text-light" th:text="${weather.description}"></h5>
