--- a/src/main/resources/static/calendar.css
+++ b/src/main/resources/static/calendar.css
@@ -45,8 +45,9 @@
 }
 
 @media (max-width: 500px) {
-  .cover {
-      background-color: #FFFCEF;
+  .calendar-right {
+      width: 100vw;
+      margin: 0;
   }
 }
 
