adding new recipe page

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -18,6 +18,8 @@
                 </div>
                 <div class="col col-sm-6">
                     <select id="yearSelect" class="form-select mt-2"></select>
+
+                    <input type="date">
                 </div>
 
 
@@ -39,6 +41,8 @@
                         <textarea id="note" name="note" rows="4"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary mt-3"> Update</button>
+
+
 
             </form>
         </main>
