--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}">
+<head th:replace="~{fragments/header :: header('SCORAC stock')}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SCORAC stock level</title>
 </head>
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar}"></div>
