--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}">
-    <title>SCORAC query chatGPT</title>
-</head>
+<head th:replace="~{fragments/header :: header('SCORAC query chatGPT')}"/>
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar}"></div>
 <div class="container-fluid">
