--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}">
-    <title>SCORAC index page</title>
-</head>
+<head th:replace="~{fragments/header :: header('SCORAC wastage')}"/>
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar}"></div>
     <div class="container-fluid">
