--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div th:replace="~{fragments/sidebar :: sidebar('wastage')}"></div>
             <main class="col-md-8 px-md-3">
-                    <h1>Wastage</h1>
+                    <h1>Wastage</h1> <!-- this is test-->
                 <div class="row">
                     <div class="col col-md-6">
                         <!-- <form id="namesForm" th:action="@{/submitNames}" method="post"-->
