--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header('SCORAC new recipe')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Add Recipe')}"></div>
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
