--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -2,12 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header('SCORAC calendar page')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Calendar')}"></div>
 <div class="container-fluid">
     <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('calendar')}"></div>
         <main class="col-md-8 px-md-3 cover">
-               <h1>Calendar</h1>
             <div class="row">
                 <div class="col col-sm-6 calendar-header">
                     <button id="prev" class="btn arrow-btn">&lt;</button>
