--- a/src/main/resources/templates/ordersList.html
+++ b/src/main/resources/templates/ordersList.html
@@ -2,12 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header('SCORAC orders list')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Orders')}"></div>
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('orders')}"></div>
         <main class="col-md-8 px-md-3">
-            <h2>Orders</h2>
             <div>
              <a href="/newOrder" class="btn btn-success my-3">Add order</a>
             </div>
