--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -2,12 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header('SCORAC reports')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Reports')}"></div>
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('reports')}"></div>
         <main class="col-md-8 px-md-3">
-                <div> reports</div>
         </main>
         <div class="col"></div>
     </div>
