--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -2,12 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header('SCORAC setup page')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Setup')}"></div>
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('setup')}"></div>
         <main class="col-md-8 px-md-3">
-            <h1>Setup</h1>
             <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="mt-3">
                 <div class="my-3">
                     <label for="restaurantName">Restaurant Name:</label>
