--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -4,13 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Stock')}"></div>
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('stock')}"></div>
         <main class="col-md-8 px-md-3">
-                <h1>Stock</h1>
-                <table class="table" id="all-table">
+            <p>oko</p>
+                <table class="table mt-5" id="all-table">
                     <thead class="thead-dark">
                     <th>Name</th>
                     <th>Type</th>
