--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -2,13 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header('SCORAC edit user')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Edit user' + ${user.username})}"></div>
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
         <main class="col-md-8 px-md-3">
-
-
                 <h1 class="col my-2">Edit User <span th:text="${user.username}"></span></h1>
                 <a href="/users/list" class="btn btn-secondary p-2 my-2">Back</a>
                 <div class="row py-2">
