--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -2,12 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header('SCORAC user list')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('User List')}"></div>
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
         <main class="col-md-8 px-md-3">
-            <h1>User List</h1>
             <a href="/index" class="btn btn-secondary p-2 my-2">Back</a>
             <div class="row">
                 <div class="col-md-1"></div>
